--- a/pz-client/src/editor/editor.scss
+++ b/pz-client/src/editor/editor.scss
@@ -15,7 +15,7 @@
       padding: 0;
       font-size: $font-size;
       border: none;
-      word-break: break-all;
+      @include break-long-words();
 
       .public-DraftEditor-content {
         min-height: 7rem;
